# mfm-v2

./: .gitignore  README.md  encode_imagenet_latents.sh  fid_scores.txt  pyproject.toml  requirements.txt  sample.sh  sample_cifar_classifier.sh  sample_classifier.sh  sample_inverse.sh  sample_inverse_dps.sh  sample_multiclass.sh  train_cifar.sh  train_cifar_denoiser.sh  train_cifar_harvard.sh  train_cifar_harvard_good.sh  train_imagenet.sh  train_imagenet_latent.sh  train_imagenet_latent_test.sh  train_imagenet_rainml.sh
conf/sample/: config.yaml  config_class.yaml  config_class_openai.yaml  config_class_openai_ess.yaml  (+4 more)
jobs/: compute_fids.sh  compute_fids_harvard.sh  reshuffle_imagenet_latents.sh  sample_cifar.sh  sample_cifar_openai.sh  sample_cifar_openai_dps.sh  sample_cifar_openai_ess.sh  sample_cifar_openai_extract.sh  sample_mnist_multiclass.sh  sample_mnist_multiclass_dps.sh  sampling.sh  sampling_dist.sh  train_cifar.sh  train_cifar_distributional.sh  train_cifar_larger.sh  train_mnist.sh  train_mnist_debug.sh  train_mnist_denoiser.sh
scripts/: build_fid_metrics.py  check_latent_reconstructions.py  check_latent_shard_classes.py  compute_fids.ipynb  encode_imagenet_latents.py  get_fid.py  inspect_latent_shards.py  plot_fid.py  reshuffle_latent_shards.py  sample.py  sample_class.py  sample_denoiser.py  sample_inverse.py  sample_multiclass.py  sample_openai.py  sample_openai_class.py  sample_openai_class_divergence.py  sample_openai_class_ess.py  sample_openai_multiclass.py  train.py  train_classifier.py  train_denoiser.py  train_distributional_model.py
(+59 files in other folders)
